{
    "name": "InputManager",
    "maps": [
        {
            "name": "Player",
            "id": "173e5138-d5d5-45f8-83bc-8d64944505bf",
            "actions": [
                {
                    "name": "SetDestination",
                    "type": "Button",
                    "id": "da2c850d-f795-44e6-a171-5764c99b89c8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "59464df4-e676-47a4-9f36-c29d91f60a48",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "SetDestination",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}